5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1594_1805.log
== TEST (2019-03-28 08:10:33) 
-- CODE:
# Leitura das coordenados dos pontos A e B:
xA = input(float("Digite xA: "))
yA = input(float("Digite yA: "))
xB = input(float("Digite xB: "))
yB = input(float("Digite yB: "))

# Calculo das coordenadas do ponto M:
xM = round((xB + xA)/2, 1)
yM = round((yB + yA)/2, 1)

print(xM ", "yM")




-- ERROR:
File "XXXX", line 11
    print(xM ", "yM")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:11:00) 
-- CODE:
# Leitura das coordenados dos pontos A e B:
xA = input(float("Digite xA: "))
yA = input(float("Digite yA: "))
xB = input(float("Digite xB: "))
yB = input(float("Digite yB: "))

# Calculo das coordenadas do ponto M:
xM = round((xB + xA)/2, 1)
yM = round((yB + yA)/2, 1)

print(xM ", "yM)




-- ERROR:
File "XXXX", line 11
    print(xM ", "yM)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:11:08) 
-- CODE:
# Leitura das coordenados dos pontos A e B:
xA = input(float("Digite xA: "))
yA = input(float("Digite yA: "))
xB = input(float("Digite xB: "))
yB = input(float("Digite yB: "))

# Calculo das coordenadas do ponto M:
xM = round((xB + xA)/2, 1)
yM = round((yB + yA)/2, 1)

print(xM ", " yM)




-- ERROR:
File "XXXX", line 11
    print(xM ", " yM)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:11:26) 
-- CODE:
# Leitura das coordenados dos pontos A e B:
xA = input(float("Digite xA: "))
yA = input(float("Digite yA: "))
xB = input(float("Digite xB: "))
yB = input(float("Digite yB: "))

# Calculo das coordenadas do ponto M:
xM = round((xB + xA)/2, 1)
yM = round((yB + yA)/2, 1)

print(xM, yM)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    xA = input(float("Digite xA: "))
ValueError: could not convert string to float: 'Digite xA: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:13:31) 
-- CODE:
# Leitura das coordenados dos pontos A e B:
xA = input(float("Digite um valor para absissa de A: "))
yA = input(float("Digite um valor para ordenada de A: "))
xB = input(float("Digite um valor para absissa de B: "))
yB = input(float("Digite um valor para ordenada de B: "))

# Calculo das coordenadas do ponto M:
xM = round((xB + xA)/2, 1)
yM = round((yB + yA)/2, 1)

print(xM, yM)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    xA = input(float("Digite um valor para absissa de A: "))
ValueError: could not convert string to float: 'Digite um valor para absissa de A: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:14:17) 
-- CODE:
# Leitura das coordenados dos pontos A e B:
xA = float(input("Digite um valor para absissa de A: "))
yA = float(input("Digite um valor para ordenada de A: "))
xB = float(input("Digite um valor para absissa de B: "))
yB = float(input("Digite um valor para ordenada de B: "))

# Calculo das coordenadas do ponto M:
xM = round((xB + xA)/2, 1)
yM = round((yB + yA)/2, 1)

print(xM, yM)




-- OUTPUT:
40.0 36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 08:15:01) 
-- CODE:
# Leitura das coordenados dos pontos A e B:
xA = float(input("Digite um valor para absissa de A: "))
yA = float(input("Digite um valor para ordenada de A: "))
xB = float(input("Digite um valor para absissa de B: "))
yB = float(input("Digite um valor para ordenada de B: "))

# Calculo das coordenadas do ponto M:
xM = round((xB + xA)/2, 1)
yM = round((yB + yA)/2, 1)

print(xM, yM)




-- EXECUTION TIME:
0.114053
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0 36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8 2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3 3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
